# fotory

./: README.md
fotory/: manage.py  pyproject.toml
fotory/fotory/: asgi.py  settings.py  urls.py  wsgi.py
fotory/fotoryApp/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
fotory/fotoryApp/migrations/: 0001_initial.py  0002_alter_photo_options_groupphoto.py  0003_jointphoto.py
